# registrawr

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/migrations/2021-08-23-052552_create_dapps/: down.sql  up.sql
cli/migrations/2021-08-23-070144_crate_installed_properties/: down.sql  up.sql
cli/src/: main.rs  models.rs
cli/src/db/: mod.rs  models.rs  schema.rs
contracts/: addresses.json  hardhat.config.js  package.json
contracts/contracts/: Dapp.sol  Registrawr.sol
contracts/scripts/: deployRegistrawr.js
registrawr-core/: Cargo.toml
registrawr-core/src/: build.rs  ipfs.rs  lib.rs  package.rs  publish.rs
