[package]
name = "registrawr"
authors = ["izaya0x <izaya0x@protonmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
registrawr-core = { path = "../registrawr-core" }
clap = "2.33"
tokio = { version = "1", features = ["full"] }
actix-web = "3"
actix-files = "0.5"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4"
libsqlite3-sys = { version="0.22", features = ["bundled"] }
dotenv = "0.15"
chrono = "0.4"